# LocalSend

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  signaling_server.py
clipboard-sync/: README.md  pubspec.yaml
clipboard-sync/lib/: clipboard_sync.dart  url_relay.dart
deploy/: deploy.py  deploy.sh  docker-compose.yml  env.example
flutter-ui/: README.md
folder-sync/: pubspec.yaml
folder-sync/lib/: file_watcher.dart  folder_sync.dart
integration/: pubspec.yaml
integration/lib/: localsend_enhanced.dart
integration/test/: clipboard_sync_test.dart  folder_sync_test.dart  history_service_test.dart  localsend_enhanced_test.dart  network_scanner_test.dart  resume_manager_test.dart  web_receiver_test.dart
localsend_app/: analysis_options.yaml  build_apk.ps1  build_apk2.ps1  build_log.txt  build_log2.txt  download_ndk28.ps1  pubspec.yaml
localsend_app/.dart_tool/: package_config.json  package_graph.json
localsend_app/android/: build.gradle.kts  gradle.properties  settings.gradle.kts  settings.gradle.kts.bak_20260611_223511
localsend_app/lib/: clipboard_sync.dart  file_transfer.dart  folder_sync.dart  main.dart  network_discovery.dart  signaling_client.dart  transfer_history.dart  web_receiver.dart
network-discovery/: pubspec.yaml
rust-transport/: Cargo.toml  README.md
rust-transport/src/: chunked_transfer.rs  lib.rs  protocol.rs  relay.rs  stun_punch.rs
signaling-server/: Cargo.toml  Dockerfile
signaling-server/src/: main.rs
transfer-history/: pubspec.yaml
turn-server/: docker-compose.yml  turnserver.conf
web-receiver/: pubspec.yaml
(+86 files in other folders)
