[package]
name = "localsend-transport"
version = "0.1.0"
edition = "2021"
description = "LocalSend Rust transport layer: NAT traversal (STUN/TURN), chunked file transfer with resume support"

[dependencies]
webrtc = "0.10"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
stun = "0.5"
turn = "0.7"
log = "0.4"
thiserror = "1"
bytes = "1"
