[package]
name = "localsend-signaling"
version = "0.1.0"
edition = "2021"
description = "LocalSend signaling server for WebRTC NAT traversal and device discovery"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.10"
