[package]
name = "localsend-signaling"
version = "0.2.0"
edition = "2021"
description = "LocalSend signaling server with file relay"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.10"
hyper = { version = "0.14", features = ["full"] }
bytes = "1"
